--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Api_recetas",
   "main": "src/app.ts",
   "scripts": {
     "dev": "nodemon --exec ts-node src/app.ts"
